# fridge-app

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: backup.yml  codeql.yml  docker-publish.yml  docs.yml  test.yml
apps/api/: Dockerfile  README.md  mkdocs.yml  pyproject.toml
apps/api/scripts/: run_migrations.py
apps/api/src/fridge_app_backend/: config.py
apps/api/src/fridge_app_backend/api/: app.py
apps/api/src/fridge_app_backend/api/routes/: inventory_routes.py
apps/api/src/fridge_app_backend/orm/crud/: base_crud.py  product_crud.py
apps/api/src/fridge_app_backend/orm/schemas/: product_schemas.py
apps/api/src/fridge_app_backend/web/: __init__.py  templating.py
apps/api/src/fridge_app_backend/web/routes/: __init__.py  inventory_web_routes.py
apps/api/tests/api/: test_inventory_routes.py
apps/api/tests/web/: test_inventory_web_routes.py
apps/frontend/: package-lock.json  package.json
apps/frontend/static/css/: app.css
apps/frontend/static/js/: app.js
apps/frontend/templates/: base.html
apps/frontend/templates/home/: index.html
apps/frontend/templates/inventory/: _empty_state.html  _flash.html  _product_card.html  _product_form.html  _product_list.html  _toolbar.html  form_page.html  index.html
apps/frontend/templates/more/: index.html
apps/frontend/templates/partials/: _bottom_nav.html  _brand_mark.html  _heroicon.html  _inventory_visual.html  _product_type_icon.html
scripts/: pi-check.sh
