[project]
name = "fridge-app-workspace"
version = "0.0.0"
description = "Workspace for the fridge app applications"
requires-python = ">=3.13,<4.0"
dependencies = [
  "poethepoet (>=0.45.0)",
]

[tool.uv.workspace]
members = ["apps/api"]

[tool.poe.executor]
type = "simple"

[tool.poe.tasks]

  [tool.poe.tasks.api]
  help = "Serve the backend app"
  shell = """
    if [ $dev ]
    then {
      uv run --directory apps/api poe api --host $host --port $port --dev
    } else {
      uv run --directory apps/api poe api --host $host --port $port
    } fi
    """

    [[tool.poe.tasks.api.args]]
    help = "Bind socket to this host (default: 0.0.0.0)"
    name = "host"
    options = ["--host"]
    default = "0.0.0.0"

    [[tool.poe.tasks.api.args]]
    help = "Bind socket to this port (default: 8000)"
    name = "port"
    options = ["--port"]
    default = "8000"

    [[tool.poe.tasks.api.args]]
    help = "Enable development mode"
    type = "boolean"
    name = "dev"
    options = ["--dev"]

  [tool.poe.tasks.docs]
  help = "Build or serve the backend documentation"
  shell = """
    if [ $serve ]
    then {
      uv run --directory apps/api poe docs --serve
    } else {
      uv run --directory apps/api poe docs
    } fi
    """

    [[tool.poe.tasks.docs.args]]
    help = "Serve the documentation locally with live reload"
    type = "boolean"
    name = "serve"
    options = ["--serve"]

  [tool.poe.tasks.lint]
  help = "Lint the backend app"
  cmd = "uv run --directory apps/api poe lint"

  [tool.poe.tasks.test]
  help = "Test the backend app"
  cmd = "uv run --directory apps/api poe test"
